tool
extends Node

onready var nodejs_client = $NodejsClient
onready var data_protocol = $DataProtocol
onready var data_manger = $DataManage
onready var wallet_account = $WalletAccount
onready var wallet_protocol = $WalletProtocol
onready var platform_account = $PlatformAccount
onready var platform_protocol = $PlatformProtocol
onready var autoload = $Autoload
onready var load_utils = $LoadUtils
onready var utils = $Utils
onready var inputmap = $InputMap
onready var main = $Main
onready var classname = $Classname


